# nanoGPT

./: .gitignore  README.md  model.py  pyproject.toml  train.py
config/: finetune_shakespeare.py  train_gpt2.py  train_shakespeare_char.py
