[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.27.4"
datasets = "^2.11.0"
tiktoken = "^0.3.3"
wandb = "0.13.7"
tqdm = "^4.65.0"
torch = "^2.0.0"
tensorboard = "^2.12.0"
torchinfo = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
